k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datatechtoncrm
  labels:
    name: datatechtoncrm
    environment: production
